# dandelion

./: CMakeLists.txt  README.md
client/: CMakeLists.txt
client/include/: balda.h  button.h  cards_for_training.h  client.h  client_server.hpp  flashcard.h  flashcards_desk.h  info_window.h  letter.h  main_menu.h  main_window.h  main_window.hpp  mainwindow.h  personal_account.h  personal_account.hpp  registration.h  training.h  vocabulary_list.h  welcome.h  window_balda.hpp  window_flashcards.hpp  window_who_am_i.hpp  window_word_chain.cpp
client/resources/: imgs.qrc
client/src/: balda.cpp  button.cpp  button.ui  cards_for_training.cpp  client.cpp  client_server.cpp  flashcard.cpp  flashcards_desk.cpp  flashcards_desk.ui  info_window.cpp  letter.cpp  main.cpp  main_menu.cpp  main_menu.ui  main_window.cpp  mainwindow.cpp  personal_account.cpp  registration.cpp  server.cpp  training.cpp  vocabulary_list.cpp  welcome.cpp  window_balda.cpp  window_flashcards.cpp  window_who_am_i.cpp
client/tests/: doctest_main.cpp
client/ui/: balda.ui  button.ui  flashcard.ui  flashcards_desk.ui  info_window.ui  main_menu.ui  main_window.ui  mainwindow.ui  personal_account.ui  registration.ui  training.ui  vocabulary_list.ui  welcome.ui
server/include/: abstract_game.hpp  balda.hpp  database.hpp  fillwords.hpp  server.h  server.hpp  who_am_i.hpp  word_chain.hpp
server/src/: abstract_game.cpp  balda.cpp  database.cpp  fillwords.cpp  game_dict.cpp  main.cpp  server.cpp  who_am_i.cpp  word_chain.cpp
server/tests/: doctest_main.cpp
